# weixin-channel-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: optimization-audit-0.2.0.md  research-and-design.md  roadmap-0.2.0.md
examples/: claude_bridge.py  echo_bot.py  media_bot.py  sync_echo.py
src/weixin_channel/: __init__.py  api.py  bot.py  cdn.py  cli.py  client.py  config.py  crypto.py  errors.py  events.py  incoming.py  logging.py  mime.py  models.py  policy.py  store.py  sync.py  text.py  thumbnail.py  utils.py
tests/: test_core.py
